Add core classifier code

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,11 @@ package_dir =
 # add your package requirements here
 install_requires =
     numpy
+    napari
+    matplotlib
+    magicgui
+    pandas
+    sklearn
 
 [options.packages.find]
 where = src
