--- a/src/napari_feature_classifier/napari.yaml
+++ b/src/napari_feature_classifier/napari.yaml
@@ -1,7 +1,7 @@
 name: napari-feature-classifier
 display_name: napari feature classifier
 contributions:
-  commands: 
+  commands:
     - id: napari-feature-classifier.make_qwidget
       python_name: napari_feature_classifier._widget:ExampleQWidget
       title: Make example QWidget
@@ -10,7 +10,13 @@ contributions:
       title: Make example magic widget
     - id: napari-feature-classifier.make_func_widget
       python_name: napari_feature_classifier._widget:example_function_widget
-      title: Make example function widget   
+      title: Make example function widget
+    - id: napari-feature-classifier.say_hi
+      title: Say hello, world!
+      python_name: napari_feature_classifier:show_hello_message
+    - id: napari-feature-classifier.initialize_classifier
+      python_name: napari_feature_classifier.classifier_widgets:initialize_classifier
+      title: Initialize a Classifier
   widgets:
     - command: napari-feature-classifier.make_qwidget
       display_name: Example QWidget
@@ -18,4 +24,9 @@ contributions:
       display_name: Example Magic Widget
     - command: napari-feature-classifier.make_func_widget
       autogenerate: true
-      display_name: Example Function Widget 
+      display_name: Example Function Widget
+    - command: napari-feature-classifier.say_hi  # note, same as command.id above
+      display_name: Hello World
+      autogenerate: true
+    - command: napari-feature-classifier.initialize_classifier
+      display_name: Initialize a Classifier
