Updating automatic tests
Trying to correctly install the dependencies, as they are not saved in a requirements file, but directly in the setup.cfg

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,8 @@ jobs:
         if [ ! -e /usr/bin/pip ]; then ln -s /usr/local/bin/pip${{ matrix.python-version }} /usr/bin/pip ; fi
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          python -m pip install .[testing]
     - name: Run static analyses
       run: |
         # stop the build if there are Python syntax errors, undefined symbols or failed code style checks
