--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
+          pip install pylint setuptools setuptools_scm wheel twine
           python -m pip install .[testing]
     - name: Run static analyses
       run: |
