Improve code style, labels in the interface and expand readme

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = napari-feature-classifier
 version = 0.0.1
-author = Joel Luethi
+author = Joel Luethi and Max Hess
 author_email = joel.luethi@uzh.ch
 url = https://github.com/fractal-napari-plugins-collection/napari_feature_classifier
 
