--- a/.github/workflows/test_and_deploy.yaml
+++ b/.github/workflows/test_and_deploy.yaml
@@ -52,18 +52,21 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools tox tox-gh-actions pycodestyle pylint
+          pip install setuptools tox tox-gh-actions pylint
           python -m pip install .[testing]
+
       - name: Run static analyses
         run: |
           # stop the build if there are Python syntax errors, undefined symbols or failed code style checks
           python -m pylint --fail-under=8 -f parseable src
-          pycodestyle --max-line-length=120 src
+
       # this runs the platform-specific tests declared in tox.ini
       - name: Test with tox
-        run: tox
+        uses: GabrielBB/xvfb-action@v1
+        with:
+          run: tox
         env:
           PLATFORM: ${{ matrix.platform }}
 
       - name: Coverage
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
