Add widget with init functionality

--- a/src/napari_feature_classifier/napari.yaml
+++ b/src/napari_feature_classifier/napari.yaml
@@ -8,8 +8,13 @@ contributions:
     - id: napari-feature-classifier.load_classifier
       python_name: napari_feature_classifier.classifier_widgets:load_classifier
       title: Load a Classifier
+    - id: napari-feature-classifier.annotator_widget_v2
+      python_name: napari_feature_classifier.annotator_widget_v2:initialize_annotator
+      title: Annotator
   widgets:
     - command: napari-feature-classifier.initialize_classifier
       display_name: Initialize a Classifier
     - command: napari-feature-classifier.load_classifier
       display_name: Load Classifier
+    - command: napari-feature-classifier.annotator_widget_v2
+      display_name: Annotator
