--- a/src/napari_feature_classifier/napari.yaml
+++ b/src/napari_feature_classifier/napari.yaml
@@ -9,7 +9,7 @@ contributions:
       python_name: napari_feature_classifier.classifier_widgets:load_classifier
       title: Load a Classifier
     - id: napari-feature-classifier.annotator_widget_v2
-      python_name: napari_feature_classifier.annotator_widget_v2:initialize_annotator
+      python_name: napari_feature_classifier.annotator_widget_v2:start_annotator
       title: Annotator
   widgets:
     - command: napari-feature-classifier.initialize_classifier
