Change sklearn to scikit-learn for conda installation

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ install_requires =
     matplotlib
     magicgui
     pandas
-    sklearn
+    scikit-learn
 
 [options.packages.find]
 where = src
