--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
-envlist = py{37,38,39}-{linux,macos,windows}
+envlist = py{38,39,310}-{linux,macos,windows}
 isolated_build=true
 
 [gh-actions]
@@ -36,4 +36,5 @@ deps =
     pytest-qt
     qtpy
     pyqt5
+    pylint
 commands = pytest -v --color=yes --cov=napari_feature_classifier --cov-report=xml
