--- a/.github/workflows/test_and_deploy.yaml
+++ b/.github/workflows/test_and_deploy.yaml
@@ -50,6 +50,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install setuptools tox tox-gh-actions
+      
+      - name: Run static analyses
+        run: |
+          # stop the build if there are Python syntax errors, undefined symbols or failed code style checks
+          python -m pylint --fail-under=8 -f parseable src
+
       # this runs the platform-specific tests declared in tox.ini
       - name: Test with tox
         uses: GabrielBB/xvfb-action@v1
