Add links to issue page, docs & source code to config file

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,11 @@ version = 0.0.2
 author = Joel Luethi and Max Hess
 author_email = joel.luethi@uzh.ch
 url = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier
+project_urls =
+    Bug Tracker = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier/issues
+    Documentation = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier#napari-feature-classifier
+    Source Code = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier
+    User Support = https://github.com/fractal-napari-plugins-collection/napari-feature-classifier/issues
 
 license = BSD-3-Clause
 description = An interactive classifier plugin to use with label images and feature measurements
