Add scikit-image version dependency, fixes #27

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ install_requires =
     matplotlib
     magicgui
     pandas
-    scikit-learn
+    scikit-learn >= 1.2.2
     pandera
     xxhash
     hypothesis
