--- a/setup.cfg
+++ b/setup.cfg
@@ -15,14 +15,12 @@ description = An interactive classifier plugin to use with label images and feat
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Framework :: napari
     Topic :: Software Development :: Testing
     Programming Language :: Python
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Operating System :: OS Independent
