Exclude dev run file from coverage statistics

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,3 +56,7 @@ napari-feature-classifier =
 [options.entry_points]
 napari.manifest =
     napari-feature-classifier = napari_feature_classifier:napari.yaml
+
+[coverage:run]
+omit =
+    src/napari_feature_classifier/dev_main.py
