--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ package_dir =
 # add your package requirements here
 install_requires =
     numpy
-    napari
+    napari < 0.4.19
     matplotlib
     magicgui
     pandas
