Pin pandrea (see #45)

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
     magicgui
     pandas
     scikit-learn >= 1.2.2
-    pandera
+    pandera < 0.20.0
     xxhash
     hypothesis
 
