--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ package_dir =
 
 # add your package requirements here
 install_requires =
-    numpy
+    numpy < 2.0
     napari < 0.4.19
     matplotlib
     magicgui
