--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ package_dir =
 # add your package requirements here
 install_requires =
     numpy < 2.0
-    napari < 0.4.19
+    napari
     matplotlib
     magicgui
     pandas
