--- a/setup.cfg
+++ b/setup.cfg
@@ -36,13 +36,15 @@ package_dir =
 
 # add your package requirements here
 install_requires =
-    numpy < 2.0
+    # numpy > 2.0
+    numpy 
     napari
     matplotlib
     magicgui
-    pandas
+    # pandas>=2.2.0 # for numpy > 2.0 support
+    pandas # for numpy > 2.0 support
     scikit-learn >= 1.2.2
-    pandera < 0.20.0
+    pandera 
     xxhash
     hypothesis
 
