Update pandas dependency to adapt to pandera requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ install_requires =
     napari
     matplotlib
     magicgui
-    pandas
+    pandas >=2.2.0
     scikit-learn >= 1.2.2
     pandera 
     xxhash
